apps/netbox/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  labels:
    app.kubernetes.io/component: netbox
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: netbox
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: netbox
    spec:
      serviceAccountName: netbox
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
      containers:
        - name: netbox
          image: ghcr.io/netbox-community/netbox:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: nginx-status
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status/applications/netbox/processes/running
              port: nginx-status
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /login/
              port: http
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /login/
              port: http
            initialDelaySeconds: 30
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config/configuration.py
              subPath: configuration.py
              readOnly: true
            - name: config
              mountPath: /run/config/netbox
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/netbox
              readOnly: true
            - name: tmp
              mountPath: /tmp
            - name: optunit
              mountPath: /opt/unit
            - name: secrets
              mountPath: /run/secrets/superuser_password
              subPath: superuser_password
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/superuser_api_token
              subPath: superuser_api_token
              readOnly: true
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 1536Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
        - name: netbox-worker
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          image: ghcr.io/netbox-community/netbox:latest
          imagePullPolicy: IfNotPresent
          command:
            - /opt/netbox/venv/bin/python
            - /opt/netbox/netbox/manage.py
            - rqworker
          volumeMounts:
            - name: config
              mountPath: /etc/netbox/config/configuration.py
              subPath: configuration.py
              readOnly: true
            - name: config
              mountPath: /run/config/netbox
              readOnly: true
            - name: secrets
              mountPath: /run/secrets/netbox
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: netbox-config
        - name: secrets
          secret:
            secretName: netbox-secret
        - name: tmp
          emptyDir:
            medium: Memory
        - name: optunit
          emptyDir:
            medium: Memory
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: netbox-worker
#   labels:
#     app.kubernetes.io/component: worker
# spec:
#   replicas: 1
#   revisionHistoryLimit: 10
#   selector:
#     matchLabels:
#       app.kubernetes.io/component: worker
#   strategy:
#     type: RollingUpdate
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/component: worker
#     spec:
#       serviceAccountName: netbox
#       automountServiceAccountToken: true
#       securityContext:
#         fsGroup: 1000
#         fsGroupChangePolicy: Always
#       initContainers:
#         - name: wait-for-backend
#           image: docker.io/bitnami/kubectl:latest
#           imagePullPolicy: "IfNotPresent"
#           command:
#           - /bin/bash
#           - -ec
#           args:
#           - |
#             deployment=${DEPLOYMENT_NAME:?deployment name is missing}
#             return_code=0

#             echo "Waiting for deployment \"${deployment}\" to be successfully rolled out..."
#             kubectl rollout status deployment "$deployment" 2>&1 || return_code=$?
#             echo "Rollout exit code: '${return_code}'"
#             exit $return_code
#           securityContext:
#             allowPrivilegeEscalation: false
#             capabilities:
#               drop:
#               - ALL
#             privileged: false
#             readOnlyRootFilesystem: true
#             runAsGroup: 1001
#             runAsNonRoot: true
#             runAsUser: 1001
#           resources:
#             limits:
#               cpu: 150m
#               ephemeral-storage: 2Gi
#               memory: 192Mi
#             requests:
#               cpu: 100m
#               ephemeral-storage: 50Mi
#               memory: 128Mi
#           env:
#             - name: DEPLOYMENT_NAME
#               value: netbox
#       containers:
#       - name: netbox-worker
#         securityContext:
#           allowPrivilegeEscalation: false
#           capabilities:
#             drop:
#             - ALL
#           privileged: false
#           readOnlyRootFilesystem: true
#           runAsGroup: 1000
#           runAsNonRoot: true
#           runAsUser: 1000
#         image: "ghcr.io/netbox-community/netbox:v4.3.1"
#         imagePullPolicy: IfNotPresent
#         command:
#           - /opt/netbox/venv/bin/python
#           - /opt/netbox/netbox/manage.py
#           - rqworker
#         volumeMounts:
#         - name: config
#           mountPath: /etc/netbox/config/configuration.py
#           subPath: configuration.py
#           readOnly: true
#         - name: config
#           mountPath: /run/config/netbox
#           readOnly: true
#         - name: secrets
#           mountPath: /run/secrets/netbox
#           readOnly: true

#         - name: netbox-tmp
#           mountPath: /tmp
#         - name: media
#           mountPath: /opt/netbox/netbox/media
#           subPath: ""
#           readOnly: false
#       volumes:
#       - name: config
#         configMap:
#           name: netbox-config
#       - name: secrets
#         projected:
#           sources:
#           - secret:
#               name: netbox-config
#               items:
#               - key: secret_key
#                 path: secret_key
#           - secret:
#               name: netbox-config
#               items:
#               - key: "email_password"
#                 path: email_password
#           - secret:
#               name: netbox-superuser
#               items:
#               - key: password
#                 path: superuser_password
#               - key: api_token
#                 path: superuser_api_token
#           - secret:
#               name: "netbox-postgresql"
#               items:
#               - key: "password"
#                 path: db_password
#           - secret:
#               name: "netbox-valkey"
#               items:
#               - key: "valkey-password"
#                 path: tasks_password
#           - secret:
#               name: "netbox-valkey"
#               items:
#               - key: "valkey-password"
#                 path: cache_password

#       - name: netbox-tmp
#         emptyDir:
#           medium: Memory
#       - name: media
#         persistentVolumeClaim:
#           claimName: netbox-media
#           readOnly: false
