apps/netbox/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbox
  labels:
    app.kubernetes.io/component: netbox
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
