apps/netbox/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  labels:
    app.kubernetes.io/component: netbox
spec:
  rules:
    - host: "netbox"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  name: http
  tls:
    - hosts:
        - "netbox"
      secretName: netbox-tls-ingress
